--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,6 @@
 h1{text-align: center;}
+h2{text-align: center;}
+
+.directory{position: absolute; width: 200px; height: 150px; line-height: 150px; background-color: orange; text-align: center; vertical-align: middle; color: white;;}
+#bin{left: 200px; top: 200px;}
+#boot{left: 500px; top: 200px;}
