--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 h1{text-align: center;}
 h2{text-align: center;}
 
-.directory{position: absolute; width: 200px; height: 150px; line-height: 150px; background-color: orange; text-align: center; vertical-align: middle; color: white;;}
+.directory{position: absolute; width: 200px; height: 150px; line-height: 150px; background-color: orange; text-align: center; vertical-align: middle; color: white;}
 .directory:hover{border: 2px solid yellow;}
+
+.directoryDescription{width: 200px; height: 150px; background-color: yellow; color: black;}
+
 #bin{left: 200px; top: 200px;}
 #boot{left: 500px; top: 200px;}
 #dev{left: 800px; top: 200px;}
