--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ h2{text-align: center;}
 .directory{position: absolute; width: 200px; height: 150px; line-height: 150px; background-color: orange; text-align: center; vertical-align: middle; color: white;}
 .directory:hover{border: 2px solid yellow;}
 
-.directoryDescription{width: 200px; height: 150px; background-color: yellow; color: black;}
+.directoryDescription{position: absolute; width: 200px; height: 150px; background-color: yellow; color: black; left: 200px; top: 300px; text-align: center;}
 
 #bin{left: 200px; top: 200px;}
 #boot{left: 500px; top: 200px;}
