--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,19 @@ h2{text-align: center;}
 
 .directoryDescription{position: absolute; width: 200px; height: 150px; background-color: yellow; color: black; left: 200px; top: 300px; text-align: center;}
 
-#bin{left: 200px; top: 200px;}
-#boot{left: 500px; top: 200px;}
-#dev{left: 800px; top: 200px;}
-#etc{left: 1100px; top: 200px;}
-#home{left: 1400px; top: 200px;}
-#media{left: 200px; top: 500px;}
-#lib{left: 500px; top: 500px;}
-#mnt{left: 800px; top: 500px;}
-#misc{left: 1100px; top: 500px;}
-#opt{left: 1400px; top: 500px;}
-#proc{left: 200px; top: 800px;}
-#root{left: 500px; top: 800px;}
-#sbin{left: 800px; top: 800px;}
-#tmp{left: 1100px; top: 800px;}
-#usr{left: 1400px; top: 800px;}
-#var{left: 800px; top: 1100px;}
+#parent{left: 900px; top: 200px;}
+#bin{left: 50px; top: 500px; display: none;}
+#sbin{left: 350px; top: 500px; display: none;}
+#etc{left: 650px; top: 500px; display: none;}
+#dev{left: 950px; top: 500px; display: none;}
+#proc{left: 1250px; top: 500px; display: none;}
+#var{left: 1550px; top: 500px; display: none;}
+#tmp{left: 50px; top: 800px; display: none;}
+#usr{left: 350px; top: 800px; display: none;}
+#home{left: 650px; top: 800px; display: none;}
+#boot{left: 950px; top: 800px; display: none;}
+#lib{left: 1250px; top: 800px; display: none;}
+#opt{left: 1550px; top: 800px; display: none;}
+#mnt{left: 350px; top: 1100px; display: none;}
+#media{left: 650px; top: 1100px; display: none;}
+#srv{left: 950px; top: 1100px; display: none;}
