--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,4 @@ h2{text-align: center;}
 #media{left: 650px; top: 1100px; display: none;}
 #srv{left: 950px; top: 1100px; display: none;}
 
-#binDescription{position: relative; left: 875px; top: 600px; color: orange;}
+#binDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
