--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,4 @@ h2{text-align: center;}
 #srv{left: 950px; top: 1100px; display: none;}
 
 #binDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#sbinDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
