Added description for /dev directory

--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,4 @@ h2{text-align: center;}
 #binDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #sbinDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #etcDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#devDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
