Added description for /proc directory

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,4 @@ h2{text-align: center;}
 #sbinDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #etcDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #devDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#procDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
