Added description for /var directory

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,4 @@ h2{text-align: center;}
 #etcDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #devDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #procDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#varDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
