Added description for /tmp directory

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,4 @@ h2{text-align: center;}
 #devDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #procDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #varDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#tmpDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
