Added description for /usr directory

--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,4 @@ h2{text-align: center;}
 #procDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #varDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #tmpDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#usrDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
