--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,4 @@ h2{text-align: center;}
 #varDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #tmpDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #usrDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#homeDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
