--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,4 @@ h2{text-align: center;}
 #tmpDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #usrDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #homeDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#bootDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
