--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,4 @@ h2{text-align: center;}
 #usrDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #homeDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #bootDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#libDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
