Added description for /opt directory

--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,4 @@ h2{text-align: center;}
 #homeDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #bootDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #libDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#optDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
