--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,4 @@ h2{text-align: center;}
 #bootDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #libDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #optDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#mntDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
