Added description for /media directory

--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,4 @@ h2{text-align: center;}
 #libDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #optDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #mntDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#mediaDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
