--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,4 @@ h2{text-align: center;}
 #optDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #mntDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
 #mediaDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
+#srvDescription{position: relative; left: 875px; top: 600px; color: orange; display: none;}
